# CEPS-Space

./: .env.backend  .gitignore  DEPLOY.md  README.md  RESTORE.md  backup_db.sh  docker-compose.yml  nginx-config.conf  start.sh  test_password.js
backend/: .env.example  Cargo.toml  Dockerfile  run_migration.sh
backend/migrations/: 00000_initial_schema.sql  20241113_add_justification_to_quiz_questions.sql  20241113_create_quiz_progress.sql  20241114_add_end_screen_button_new_tab.sql  20241114_add_quiz_end_screen_button_new_tab.sql  20241118000001_create_kahoot_tables.sql  20241118000002_create_open_question_tables.sql  20250220_multiplayer_room_schema.sql  20250220_quiz_min_players.sql  20250220_word_search_hide_words.sql  fix_timestamps.sql
backend/src/: db.rs  main.rs  middleware.rs  models.rs  websocket.rs
backend/src/handlers/: admin.rs  auth.rs  game_results.rs  games.rs  kahoot.rs  kahoot_old.rs  mod.rs  open_question.rs  quiz.rs  rooms.rs  sessions.rs  word_search.rs
frontend/: .env.production  SECURITY.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useRoomWebSocket.js
frontend/src/layouts/: AdminLayout.jsx
frontend/src/pages/: CreateGame.jsx  CreateKahoot.jsx  CreateOpenQuestion.jsx  CreateQuiz.jsx  CreateRoom.jsx  CreateWordSearch.jsx  EditKahoot.jsx  EditOpenQuestion.jsx  EditQuiz.jsx  EditRoom.jsx  EditWordSearch.jsx  GameAccess.jsx  Games.jsx  Home.jsx  Login.jsx  (+12 more)
(+5 files in other folders)
