[package]
name = "jogos-educativos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-actors = "4.3"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
jsonwebtoken = "9.3"
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }
url = "2.5"
